# objectlink-core-python

./: .gitignore  README.md  Taskfile.yml  demo_server.py  pyproject.toml  pytest.ini  server.py  setup.cfg
examples/: README.md  app.py  requirements.txt  server.py
olink/: clientnode.py  remotenode.py  test_clientnode.py
olink/core/: node.py  protocol.py  test_protocol.py  types.py
olink/mocks/: mocksink.py  mocksource.py
src/olink/: clientnode.py  remotenode.py
src/olink/client/: __init__.py  node.py  registry.py  sink.py  types.py
src/olink/core/: __init__.py  hook.py  node.py  protocol.py  types.py
src/olink/mocks/: __init__.py  mocksink.py  mocksource.py
src/olink/remote/: __init__.py  adapter.py  node.py  registry.py  source.py  types.py
src/olink/ws/: __init__.py  client.py  conn.py  emitter.py  server.py  test_client.py
tests/: test_clientnode.py  test_comms.py  test_protocol.py  test_remotenode.py  test_ws_client.py
