[metadata]
name = olink-core
version = 0.3.1
author = ApiGear
author_email = info@apigear.io
description = ObjectLink Core Protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apigear-io/objectlink-core-python
project_urls =
    Bug Tracker = https://github.com/apigear-io/objectlink-core-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src